--- a/index.html
+++ b/index.html
@@ -292,7 +292,53 @@
           <div class="about__circle"></div>
         </section>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <div class="footer__columns">
+          <div class="footer__logo">
+            <img
+              src="./images/logo_white.svg"
+              alt="Triple Peaks Library Logo"
+            />
+          </div>
+          <div class="footer__column-heading">
+            <h3 class="footer__column-heading">Hours</h3>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <p>Weekdays: 9am - 8pm</p>
+              </li>
+              <li class="footer__list-item">
+                <p>Weekends: 10am - 6pm</p>
+              </li>
+            </ul>
+          </div>
+          <div class="footer__column_content_social">
+            <h3 class="footer__column-heading">Social Media</h3>
+            <ul class="footer__list">
+              <li class="footer__list-item">
+                <a href="#" class="footer__column-link">
+                  <img
+                    src="./images/facebook_white.svg"
+                    alt="FaceBook Logo"
+                    class="footer__social-icon"
+                  />
+                  Facebook
+                </a>
+              </li>
+              <li class="footer__list-item">
+                <a href="#" class="footer__column-link">
+                  <img
+                    src="./images/instagram_white.svg"
+                    alt="Instagram Logo"
+                    class="footer__social-icon"
+                  />
+                  Instagram
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <p class="footer__copyright">© 2023 AJ Martinez</p>
+      </footer>
     </div>
   </body>
 </html>
