--- a/index.html
+++ b/index.html
@@ -18,22 +18,21 @@
             alt="Triple Peaks Library Logo"
             class="nav__logo"
           />
-          <!-- Putting navigation links in a list is supposed to be the best practice of writing the semantic code since it allows screen readers to pause between each link instead of reading all the links as a sentence. -->
           <ul class="nav__links">
             <li>
-              <a class="nav__link">Events</a>
+              <a href="#event" class="nav__link">Events</a>
             </li>
             <li>
-              <a class="nav__link">Staff picks</a>
+              <a href="#staff" class="nav__link">Staff picks</a>
             </li>
             <li>
-              <a class="nav__link">Become a member</a>
+              <a href="#member" class="nav__link">Become a member</a>
             </li>
             <li>
-              <a class="nav__link">About</a>
+              <a href="#about" class="nav__link">About</a>
             </li>
             <li>
-              <a class="nav__link">Contacts</a>
+              <a href="#contact" class="nav__link">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -50,7 +49,7 @@
           class="header__image"
         />
         <div class="header__footer">
-          <a class="header__link">About the library &darr;</a>
+          <a href="#about" class="header__link">About the library &darr;</a>
           <p class="header__address">
             200 Success Avenue, The Town of Triple Peaks
           </p>
@@ -58,7 +57,7 @@
       </header>
 
       <main class="content">
-        <section class="events">
+        <section class="events" id="event">
           <div class="events__content">
             <h2 class="events__heading">Upcoming events:</h2>
             <h3 class="events__title">
@@ -138,7 +137,7 @@
           </div>
         </section>
 
-        <section class="staff">
+        <section class="staff" id="staff">
           <h2 class="staff__title">Staff picks</h2>
           <p class="staff__subtitle">That our readers love</p>
           <ul class="staff__content">
@@ -212,7 +211,7 @@
           </ul>
         </section>
 
-        <section class="membership">
+        <section class="membership" id="member">
           <h2 class="membership__title">Becoming a library member is easy!</h2>
           <ul class="membership__steps">
             <li class="step">
@@ -268,7 +267,7 @@
           </ul>
         </section>
 
-        <section class="about">
+        <section class="about" id="about">
           <h2 class="about__title">About the library</h2>
           <div class="about__content">
             <p class="about__paragraph">
@@ -292,15 +291,16 @@
           <div class="about__circle"></div>
         </section>
       </main>
-      <footer class="footer">
+      <footer class="footer" id="contact">
         <div class="footer__columns">
-          <div class="footer__logo">
+          <div class="footer__column">
             <img
               src="./images/logo_white.svg"
               alt="Triple Peaks Library Logo"
+              class="footer__logo"
             />
           </div>
-          <div class="footer__column-heading">
+          <div class="footer__column footer__column_content_hours">
             <h3 class="footer__column-heading">Hours</h3>
             <ul class="footer__list">
               <li class="footer__list-item">
@@ -311,7 +311,7 @@
               </li>
             </ul>
           </div>
-          <div class="footer__column_content_social">
+          <div class="footer__column footer__column_content_social">
             <h3 class="footer__column-heading">Social Media</h3>
             <ul class="footer__list">
               <li class="footer__list-item">
